fix(layout): page overflow horizontally on mobile browsers

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -339,7 +339,6 @@ body {
 }
 
 .footer {
-    padding: 3rem 0;
     font-size: .9rem;
     background: transparent;
 
